# workshops

./: README.md
stackon/: README.md  pyproject.toml
stackon/base_client/: client.py
stackon/mosquitto/: docker-compose.yml
stackon/mosquitto/config/: mosquitto.conf
stackon/worker/: main.py
stackon/worker/engine/: client.py
stackon/worker/model/: job.py
